graphes/_build/parser_graphe.output
   0  $accept : %entry% $end

   1  main : commentaire_liste suite
   2       | suite

   3  commentaire_liste : commentaire commentaire_liste
   4                    | commentaire

   5  suite : P E D G E INT INT EOL liste

   6  liste : EOF
   7        | arete liste
   8        | commentaire liste

   9  commentaire : C texte

  10  texte : C texte
  11        | E texte
  12        | D texte
  13        | G texte
  14        | P texte
  15        | INT texte
  16        | TRUC texte
  17        | EOL

  18  arete : E INT INT EOL

  19  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (19)

	P  shift 3
	C  shift 4
	.  error

	main  goto 5
	commentaire_liste  goto 6
	suite  goto 7
	commentaire  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	suite : P . E D G E INT INT EOL liste  (5)

	E  shift 9
	.  error


state 4
	commentaire : C . texte  (9)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 18


state 5
	%entry% : '\001' main .  (19)

	.  reduce 19


state 6
	main : commentaire_liste . suite  (1)

	P  shift 3
	.  error

	suite  goto 19


state 7
	main : suite .  (2)

	.  reduce 2


state 8
	commentaire_liste : commentaire . commentaire_liste  (3)
	commentaire_liste : commentaire .  (4)

	C  shift 4
	P  reduce 4

	commentaire_liste  goto 20
	commentaire  goto 8


state 9
	suite : P E . D G E INT INT EOL liste  (5)

	D  shift 21
	.  error


state 10
	texte : INT . texte  (15)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 22


state 11
	texte : P . texte  (14)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 23


state 12
	texte : E . texte  (11)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 24


state 13
	texte : D . texte  (12)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 25


state 14
	texte : G . texte  (13)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 26


state 15
	texte : C . texte  (10)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 27


state 16
	texte : EOL .  (17)

	.  reduce 17


state 17
	texte : TRUC . texte  (16)

	INT  shift 10
	P  shift 11
	E  shift 12
	D  shift 13
	G  shift 14
	C  shift 15
	EOL  shift 16
	TRUC  shift 17
	.  error

	texte  goto 28


state 18
	commentaire : C texte .  (9)

	.  reduce 9


state 19
	main : commentaire_liste suite .  (1)

	.  reduce 1


state 20
	commentaire_liste : commentaire commentaire_liste .  (3)

	.  reduce 3


state 21
	suite : P E D . G E INT INT EOL liste  (5)

	G  shift 29
	.  error


state 22
	texte : INT texte .  (15)

	.  reduce 15


state 23
	texte : P texte .  (14)

	.  reduce 14


state 24
	texte : E texte .  (11)

	.  reduce 11


state 25
	texte : D texte .  (12)

	.  reduce 12


state 26
	texte : G texte .  (13)

	.  reduce 13


state 27
	texte : C texte .  (10)

	.  reduce 10


state 28
	texte : TRUC texte .  (16)

	.  reduce 16


state 29
	suite : P E D G . E INT INT EOL liste  (5)

	E  shift 30
	.  error


state 30
	suite : P E D G E . INT INT EOL liste  (5)

	INT  shift 31
	.  error


state 31
	suite : P E D G E INT . INT EOL liste  (5)

	INT  shift 32
	.  error


state 32
	suite : P E D G E INT INT . EOL liste  (5)

	EOL  shift 33
	.  error


state 33
	suite : P E D G E INT INT EOL . liste  (5)

	E  shift 34
	C  shift 4
	EOF  shift 35
	.  error

	commentaire  goto 36
	liste  goto 37
	arete  goto 38


state 34
	arete : E . INT INT EOL  (18)

	INT  shift 39
	.  error


state 35
	liste : EOF .  (6)

	.  reduce 6


state 36
	liste : commentaire . liste  (8)

	E  shift 34
	C  shift 4
	EOF  shift 35
	.  error

	commentaire  goto 36
	liste  goto 40
	arete  goto 38


state 37
	suite : P E D G E INT INT EOL liste .  (5)

	.  reduce 5


state 38
	liste : arete . liste  (7)

	E  shift 34
	C  shift 4
	EOF  shift 35
	.  error

	commentaire  goto 36
	liste  goto 41
	arete  goto 38


state 39
	arete : E INT . INT EOL  (18)

	INT  shift 42
	.  error


state 40
	liste : commentaire liste .  (8)

	.  reduce 8


state 41
	liste : arete liste .  (7)

	.  reduce 7


state 42
	arete : E INT INT . EOL  (18)

	EOL  shift 43
	.  error


state 43
	arete : E INT INT EOL .  (18)

	.  reduce 18


12 terminals, 9 nonterminals
20 grammar rules, 44 states
